# fastjet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
cmake/: FindFASTJET.cmake
src/: main.cpp
src/fastjet/: __init__.py  fastjet.py  pyjet.py
swig-4.0.2/: Makefile  config.status  preinst-swig
swig-4.0.2/CCache/: ccache-swig  ccache_swig_config.h  config.status
swig-4.0.2/Examples/: Makefile
swig-4.0.2/Examples/test-suite/csharp/: Makefile
swig-4.0.2/Examples/test-suite/go/: Makefile
swig-4.0.2/Examples/test-suite/java/: Makefile
swig-4.0.2/Examples/test-suite/lua/: Makefile
swig-4.0.2/Examples/test-suite/octave/: Makefile
swig-4.0.2/Examples/test-suite/python/: Makefile
swig-4.0.2/Examples/test-suite/r/: Makefile
swig-4.0.2/Examples/test-suite/ruby/: Makefile
swig-4.0.2/Source/: Makefile
swig-4.0.2/Source/CParse/.deps/: cscanner.Po  parser.Po  templ.Po  util.Po
swig-4.0.2/Source/DOH/.deps/: base.Po  file.Po  fio.Po  hash.Po  list.Po  memory.Po  string.Po  void.Po
swig-4.0.2/Source/Doxygen/.deps/: doxyentity.Po  doxyparser.Po  doxytranslator.Po  javadoc.Po  pydoc.Po
swig-4.0.2/Source/Include/: swigconfig.h
swig-4.0.2/Source/Modules/.deps/: allocate.Po  browser.Po  contract.Po  csharp.Po  d.Po  directors.Po  emit.Po  go.Po  guile.Po  interface.Po  java.Po  javascript.Po  lang.Po  lua.Po  main.Po  mzscheme.Po  nested.Po  ocaml.Po  octave.Po  overload.Po  php.Po  (+10 more)
swig-4.0.2/Tools/javascript/: Makefile
tests/: test_package.py
(+20 files in other folders)
